--- a/WarsawCityGame/app/src/main/res/values/strings.xml
+++ b/WarsawCityGame/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">Warsaw City Game</string>
     <string name="applicationLogo">application logo</string>
     <string name="imageDesc">image</string>
+    <string name="LoginText">Login:</string>
+    <string name="PasswordText">Password:</string>
+    <string name="LogIntoText">Log in</string>
+    <string name="RegisterDescriptionText">Don\'t have an account?</string>
+    <string name="RegisterText">Register</string>
 </resources>
