some register screen (very mocked)

--- a/WarsawCityGame/app/src/main/res/values/strings.xml
+++ b/WarsawCityGame/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="LogIntoText">Log in</string>
     <string name="RegisterDescriptionText">Don\'t have an account?</string>
     <string name="RegisterText">Register</string>
+    <string name="ForceRegisterText">Register</string>
 </resources>
