--- a/WarsawCityGame/app/src/main/res/values/strings.xml
+++ b/WarsawCityGame/app/src/main/res/values/strings.xml
@@ -8,4 +8,39 @@
     <string name="RegisterDescriptionText">Don\'t have an account?</string>
     <string name="RegisterText">Register</string>
     <string name="ForceRegisterText">Register</string>
+    <string name="hello">Hello World, MainActivity!</string>
+    <color name="White">#FFFFFF</color>
+
+
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="drawer_open">Slider Menu Opened</string>
+    <string name="drawer_close">Slider Menu Closed</string>
+
+    <!-- Nav Drawer Menu Items -->
+    <string-array name="nav_drawer_items">
+        <item >Current mission</item>
+        <item >Profile</item>
+        <item >Friends</item>
+        <item >Get mission</item>
+        <item >Achievements</item>
+        <item >Hall of fame</item>
+        <item >Log out</item>
+    </string-array>
+
+    <!-- Nav Drawer List Item Icons -->
+    <!-- Keep them in order as the titles are in -->
+    <array name="nav_drawer_icons">
+        <!-- i will add it ASAP. working on it. currently not showing -->
+        <item>"dsda"</item>
+        <item>"dsda"</item>
+        <item>"dsda"</item>
+        <item>"dsda"</item>
+        <item>"dsda"</item>
+        <item>"dsda"</item>
+    </array>
+
+    <!-- Content Description -->
+    <string name="desc_list_item_icon">Item Icon</string>
+
 </resources>
