--- a/WarsawCityGame/app/src/main/res/values/strings.xml
+++ b/WarsawCityGame/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
 
     <!-- Content Description -->
     <string name="desc_list_item_icon">Item Icon</string>
+    <string name="backTxt">BACK</string>
 
 </resources>
