--- a/WarsawCityGame/app/src/main/res/values/strings.xml
+++ b/WarsawCityGame/app/src/main/res/values/strings.xml
@@ -44,5 +44,6 @@
     <!-- Content Description -->
     <string name="desc_list_item_icon">Item Icon</string>
     <string name="backTxt">BACK</string>
+    <string name="dummyTxt">There is something about a Martini,\n A tingle remarkably pleasant;\n A yellow, a mellow Martini;\n I wish I had one at present.</string>
 
 </resources>
