--- a/WarsawCityGame/app/src/main/res/values/strings.xml
+++ b/WarsawCityGame/app/src/main/res/values/strings.xml
@@ -22,13 +22,13 @@
     <string name="namelabel">"Name : "</string>
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
-        <item >Current mission</item>
-        <item >Profile</item>
-        <item >Friends</item>
-        <item >Get mission</item>
-        <item >Achievements</item>
-        <item >Hall of fame</item>
-        <item >Log out</item>
+        <item>Current mission</item>
+        <item>Profile</item>
+        <item>Friends</item>
+        <item>Get mission</item>
+        <item>Achievements</item>
+        <item>Hall of fame</item>
+        <item>Log out</item>
     </string-array>
 
     <!-- Nav Drawer List Item Icons -->
@@ -48,5 +48,8 @@
     <string name="desc_list_item_icon">Item Icon</string>
     <string name="backTxt">BACK</string>
     <string name="dummyTxt">There is something about a Martini,\n A tingle remarkably pleasant;\n A yellow, a mellow Martini;\n I wish I had one at present.</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
