--- a/WarsawCityGame/app/src/main/res/values/strings.xml
+++ b/WarsawCityGame/app/src/main/res/values/strings.xml
@@ -53,4 +53,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_maps">Map</string>
 
+    <string name="google_maps_key">AIzaSyAx5IfzUbz3V8qXyepAQB45C4HNkwI4fBQ</string>
+    <string name="google_app_id">128021</string>
 </resources>
