--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/values/strings.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
 
     <string name="google_maps_key">AIzaSyDBfIN4wq9pPx3anzqnsblT0X_Sz2gRAvA</string>
     <string name="google_app_id">128021</string>
+    <string name="login_failed">Login failed</string>
 </resources>
