--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/values/strings.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="levellabel">"Level : "</string>
     <string name="namelabel">"Name : "</string>
     <!-- Nav Drawer Menu Items -->
-    <string-array name="nav_drawer_items">
+    <string-array name="menu_titles">
         <item>Current mission</item>
         <item>Profile</item>
         <item>Friends</item>
@@ -34,7 +34,7 @@
 
     <!-- Nav Drawer List Item Icons -->
     <!-- Keep them in order as the titles are in -->
-    <array name="nav_drawer_icons">
+    <array name="menu_icons">
         <!-- i will add it ASAP. working on it. currently not showing -->
         <item>@drawable/currentmission</item>
         <item>@drawable/profile</item>
