--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/values/strings.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/values/strings.xml
@@ -79,4 +79,5 @@
     <string name="successChangedUserDataText">Successfully changed user data</string>
     <string name="loginFailedDescription">Make sure your credentials are correct and try again. Login failed.</string>
     <string name="loginFailedtext">An error occured</string>
+    <string name="removePhotoText">REMOVE PHOTO</string>
 </resources>
