--- a/WarsawCityGame/WarsawCityGames.App/src/main/res/values/strings.xml
+++ b/WarsawCityGame/WarsawCityGames.App/src/main/res/values/strings.xml
@@ -83,4 +83,5 @@
     <string name="addFriendText">Add a friend</string>
     <string name="yourFriendsText">Your friends</string>
     <string name="connectionErrorText">An error occured. Make sure your connection is valid and try again.</string>
+    <string name="errorText">Error</string>
 </resources>
